force-app/main/default/objects/GameProperty__c/GameProperty__c.object-meta.xml
<CustomObject>
    <label>Game Property</label>
    <nameField>
        <displayFormat>GP-{000000}</displayFormat>
        <label>Game Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>