force-app/main/default/objects/GameProperty__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>