force-app/main/default/objects/GameProperty__c/fields/Houses__c.field-meta.xml
<CustomField>
    <fullName>Houses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Houses</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>