force-app/main/default/objects/GameProperty__c/fields/IsMonopoly__c.field-meta.xml
<CustomField>
    <fullName>IsMonopoly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monopoly?</label>
    <type>Checkbox</type>
</CustomField>