force-app/main/default/objects/GameProperty__c/fields/IsMortgaged__c.field-meta.xml
<CustomField>
    <fullName>IsMortgaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgaged?</label>
    <type>Checkbox</type>
</CustomField>