force-app/main/default/objects/GameProperty__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Game Properties</relationshipLabel>
    <relationshipName>GameProperties</relationshipName>
    <type>Lookup</type>
</CustomField>