force-app/main/default/objects/GameProperty__c/fields/PropertyColor__c.field-meta.xml
<CustomField>
    <fullName>PropertyColor__c</fullName>
    <formula>Property__r.Color__c</formula>
    <label>Property Color</label>
    <type>Text</type>
</CustomField>