force-app/main/default/objects/GameProperty__c/fields/PropertyMetadataName__c.field-meta.xml
<CustomField>
    <fullName>PropertyMetadataName__c</fullName>
    <label>Property Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>