force-app/main/default/objects/GameProperty__c/fields/PropertyPosition__c.field-meta.xml
<CustomField>
    <fullName>PropertyPosition__c</fullName>
    <formula>Property__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>