force-app/main/default/objects/GameProperty__c/fields/Rent2__c.field-meta.xml
<CustomField>
    <fullName>Rent2__c</fullName>
    <label>Rent2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>