force-app/main/default/objects/GameProperty__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <formula>IF(Hotel__c == 1, Property__r.RentHotel__c,
IF(Houses__c == 4, Property__r.RentHouse4__c,
IF(Houses__c == 3, Property__r.RentHouse3__c,
IF(Houses__c == 2, Property__r.RentHouse2__c,
IF(Houses__c == 1, Property__r.RentHouse1__c,
IF(IsMonopoly__c == true, Property__r.Rent__c * 2, Property__r.Rent__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>