force-app/main/default/objects/GameProperty__c/fields/RentHouse4__c.field-meta.xml
<CustomField>
    <fullName>RentHouse4__c</fullName>
    <label>Rent (4 Houses)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>