force-app/main/default/objects/GameProperty__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Property&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chance</fullName>
                <default>true</default>
                <label>Chance</label>
            </value>
            <value>
                <fullName>Community Chest</fullName>
            </value>
            <value>
                <fullName>Free Parking</fullName>
            </value>
            <value>
                <fullName>Go To Jail</fullName>
            </value>
            <value>
                <fullName>Jail</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>